# user-management-system-api

./: .dockerignore  .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/initdb/: convert_xlsx_to_csv.py  init.sql  userdata.csv  userdata.xlsx
scripts/: start.sh  stop.sh
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: users.py
src/configs/: __init__.py  config.py
src/crud/: __init__.py  base.py  user.py
src/databases/: __init__.py  database.py
src/models/: base.py  user.py
src/schemas/: __init__.py  user.py
src/utilities/: __init__.py  exceptions.py
